--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
 [build]
 publish = "public"
 command = "npm run build"
+[[plugins]]
+package = "@netlify/plugin-sitemap"
+
+  [plugins.inputs]
+  buildDir = "public"
+  baseUrl = "https://yannickblog.tk"
+  
