--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "moment": "2.23.0",
         "moment-strftime": "0.5.0",
         "netlify-cms-app": "^2.15.11",
+        "netlify-cms-yoast-seo": "^1.0.5",
         "node-sass": "4.14.0",
         "node-sass-utils": "1.1.2",
         "react": "16.5.1",
