--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "serve": "gatsby serve"
     },
     "dependencies": {
+        "@netlify/plugin-sitemap": "^0.8.1",
         "@stackbit/gatsby-plugin-menus": "0.0.4",
         "babel-runtime": "6.26.0",
         "chokidar": "3.4.0",
